feat: adicionando métodos extras para like e match, tratamento de erro ao dar match, criando diagrama do banco